--- a/index.html
+++ b/index.html
@@ -1,38 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-   <link rel="stylesheet" href="css/style.css" type="text/css">
-    <title>Document</title>
-</head>
-<body>
-    <table>
-        <tr>
-            <td class="cell" id="0"></td>
-            <td class="cell" id="1"></td>
-            <td class="cell" id="2"></td>
-        </tr>
-        <tr>
-            <td class="cell" id="3"></td>
-            <td class="cell" id="4"></td>
-            <td class="cell" id="5"></td>
-        </tr>
-        <tr>
-            <td class="cell" id="6"></td>
-            <td class="cell" id="7"></td>
-            <td class="cell" id="8"></td>
-        </tr>
-    </table>
-
-    <div class="endGame">
-        <div class="text"></div> 
-    </div>
-
-    <button onclick="startGame()">Play Again</button>
-
-    <script type="text/javascript" src="js/app.js"></script>
-</body>
+<html>
+    <head>
+        <link rel="stylesheet" href="css/style.css">
+    </head>
+    <body>
+        <div id="container">
+            <h1>Tic Tac Toe</h1>
+            <div class="q" id="q0"></div>
+            <div class="q" id="q1"></div>
+            <div class="q" id="q2"></div>
+            <div class="q" id="q3"></div>
+            <div class="q" id="q4"></div>
+            <div class="q" id="q5"></div>
+            <div class="q" id="q6"></div>
+            <div class="q" id="q7"></div>
+            <div class="q" id="q8"></div>
+        </div>
+        <script src="js/app.js"></script>
+    </body>
 </html>
